force-app/main/default/objects/FuelSurchargeSetting__c/FuelSurchargeSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Fuel Surcharge Setting</label>
</CustomObject>