force-app/main/default/objects/FuelSurchargeSetting__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>Product Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>