force-app/main/default/objects/FuelSurchargeSetting__c/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <label>Surcharge</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>